--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   google_fonts: ^4.0.3
+  flutter_session_manager: ^1.0.2
 
 dev_dependencies:
   flutter_test:
